# GEKTOR

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  AUTOMATED_CHECKS.md  BUGFIX_REPORT.md  CLAUDE.md  CORE_MANIFESTO.md  GEKTOR_SYSTEM_RUNTIME_ENVIRONMENT_CONTEXT.md  LAUNCH_CONTEXT.md  Makefile  README.md  SINGLE_SOURCE_OF_TRUTH.md  apex_supervisor.py  cleanup_legacy.py  deploy.ps1  deploy.sh  deploy_remote.sh  deploy_sync.ps1  deploy_to_server.ps1  docker-compose.yml  gektor_control.sh  init_workspace.sh  main.py  preflight_check.py  pyproject.toml  requirements.txt  run_tests.py  stage_build.py  start.sh
.github/workflows/: ci.yml
deploy/: gektor.service  tune_kernel.sh
docs/: GEKTOR_APEX_SESSION_CONTEXT.md
src/: preflight_check.py
src/application/: alpha_decay.py  alpha_engine.py  defender.py  egress_router.py  escrow.py  execution_gateway.py  execution_router.py  executor.py  exit_protocol_service.py  formatters.py  inventory_manager.py  layer6_autonomous.py  microstructure.py  operator_gate.py  orchestrator.py  order_lifecycle.py  outbox_alert_sink.py  outbox_relay.py  pool_manager.py  prism_optimizer.py  q_lab.py  radar_pipeline.py  reconnect_reconciler.py  sentinel.py  sentry_brain.py  state_healer.py  supervisor.py  vanguard.py  watchdog.py
src/domain/: alpha_model.py  conflation.py  cortex.py  dollar_bar.py  dollar_bars.py  exit_protocol.py  friction_guard.py  gravitational_anchor.py  intent_capsule.py  intent_ledger.py  liquidity_detectors.py  macro_regime.py  markets.py  math_core.py  quant_radar.py  schrodinger_ledger.py  shadow_ledger.py  state_snapshoter.py  tilt_breaker.py  triple_barrier.py  vpin_engine.py
src/infrastructure/: adaptive_threshold.py  bybit.py  bybit_ws_ingestion.py  config.py  conflation.py  event_bus.py  feature_store.py  flight_recorder.py  hydration.py  information_clocks.py  ipc.py  latency_shield.py  macro_risk.py  monitoring.py  network_tuning.py  oob_defender.py  rest_layer.py  seqlock_orderbook.py  shadow_ledger.py  (+11 more)
tests/: conftest.py  mock_bybit_server.py  test_architect_v2.py  test_chroma_direct.py  test_intent_capsule.py  test_schrodinger_ledger.py  test_skill_retrieval.py  test_sniper_math.py  test_tilt_breaker.py  test_vpin_engine.py  test_zltp.py
(+50 files in other folders)
