[tool.poetry]
name = "gektor"
version = "3.0.0"
description = "GEKTOR HFT Trading Engine"
authors = ["aineuroexpert-cell <info@aineuroexpert-cell.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = { version = "3.9.1", extras = ["speedups"] }
aiohttp-socks = "0.8.4"
asyncpg = "0.29.0"
SQLAlchemy = "2.0.23"
pydantic = "2.5.2"
pydantic-settings = "2.1.0"
python-dotenv = "^1.0.0"
orjson = "^3.9.10"
loguru = "0.7.2"
pyyaml = "6.0.1"
redis = "5.0.1"
msgspec = "0.18.5"
numpy = "1.26.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.7.1"
ruff = "0.1.7"
types-PyYAML = "6.0.12.12"
types-redis = "4.6.0.11"
pytest = "7.4.3"
pytest-asyncio = "0.23.2"
testcontainers = { version = "3.7.1", extras = ["postgres"] }
freezegun = "1.2.2"
hypothesis = "^6.100"
aiosqlite = "^0.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["venv", ".venv", "build", "dist"]
mypy_path = "."
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
exclude = ["venv", ".venv", "build", "dist"]
src = ["."]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # Pylint
    "ASYNC" # flake8-async
]
ignore = [
    "PLR0913",  # Allow more than 5 arguments in functions
    "PLR2004",  # Magic value comparisons are fine in tests and math hot paths
    "PLR0912",  # Branch count: VPIN engine hot path is deliberately monolithic
    "PLR0915",  # Statement count: ditto
    "PLC0415",  # Inline imports in __main__ blocks are explicit and intentional
    "W291",     # Trailing whitespace — handled by black, not by ruff in this repo
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"src/domain/vpin_engine.py" = ["PLR0912", "PLR0915"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
